kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/invalid/005_several_superoperations.kmt
/* $Id: 005_several_superoperations.kmt,v 1.2 2007-10-16 11:49:10 ftanguy Exp $ */

// Test of constraints on operations
// This test must make specific errors to appear. 

package root_package;

require kermeta

using kermeta::standard


class C1
{
	operation op1(a:Integer,b:String) is do
	end

	operation op2() is do
	end

}


class C1bis 
{
	operation op2() is do
	end
}



class C2bis inherits C1, C1bis
{
	/*
	 * This method is defined in C1 and C1bis. User must tell which one of the two he
	 * wants to "inherit"
	 * (op2 from C1 is do)
	 * the load  fails on that error ...
	 */ 
	method op2() is do
	end
	
}
